src-tauri/build_log_5.txt
    Checking tauri-app v0.1.0 (D:\WindowsProyects\Antigravity\Fork\src-tauri)
warning: unused variable: `id`
  --> src\core\sandbox.rs:52:13
   |
52 |         let id = self.docker.create_container(
   |             ^^ help: if this is intentional, prefix it with an underscore: `_id`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

error[E0505]: cannot move out of `app` because it is borrowed
   --> src\lib.rs:166:44
    |
164 |         .setup(|app| {
    |                 --- binding `app` declared here
165 |             let handle = app.handle();
    |                          --- borrow of `*app` occurs here
166 |             tauri::async_runtime::block_on(async move {
    |                                            ^^^^^^^^^^ move out of `app` occurs here
167 |                 let db = Database::new(handle.clone()).await.expect("Failed to init DB");
    |                                        ------ borrow later captured here by closure
...
188 |                 app.manage(AppState {
    |                 --- move occurs due to use in coroutine

For more information about this error, try `rustc --explain E0505`.
warning: `tauri-app` (lib) generated 1 warning
error: could not compile `tauri-app` (lib) due to 1 previous error; 1 warning emitted
